# nextapi

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/nextcut-sidecar/: README.md  build.py  nextcut-sidecar.spec  pyproject.toml  requirements.txt
apps/nextcut-sidecar/app/: main.py
apps/nextcut-sidecar/app/api/: agents.py  auth.py  comfyui.py  config.py  director.py  generate.py  models.py  projects.py  quickcreate.py  setup.py
apps/nextcut-sidecar/app/core/: config.py  events.py  media_tools.py
apps/nextcut-sidecar/director_engine/: __init__.py
apps/nextcut-sidecar/director_engine/agents/: __init__.py  art_director.py  audio_director.py  base.py  character_extractor.py  cinematographer.py  consistency_checker.py  editing_agent.py  prompt_optimizer.py  screenwriter.py  storyboard_artist.py
apps/nextcut-sidecar/director_engine/interfaces/: __init__.py  models.py
apps/nextcut-sidecar/director_engine/pipelines/: __init__.py  director.py
apps/nextcut-sidecar/director_engine/providers/: __init__.py  base.py  comfyui.py  http_adapters.py  registry.py  seedance.py
apps/nextcut-sidecar/tests/: test_agent_asset_generation_contracts.py  test_generate_preflight.py  test_production_bible.py  test_provider_envelope.py  test_provider_registry.py  test_runtime_config.py  test_setup_production_lines.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/nextapi/: __init__.py  (+1 more)
sdks/python/tests/: test_client.py
(+754 files in other folders)
