[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextapi"
version = "0.1.0"
description = "Official Python SDK for NextAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "NextAPI" }]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest>=7", "respx>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/nextapi"]
